# pydotaconstants

./: .gitignore  README.md  pyproject.toml
src/pydotaconstants/: __init__.py  _ability.py  _core.py  _heroes.py  _loader.py  _update.py  heroes.py  update.py
src/pydotaconstants/data/: abilities.json  heroes.json
